<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.MainFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/maxFailedPasswordAttempts"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:helperTextEnabled="true"
                    app:helperText="@string/max_failed_password_attempts_helper_text"
                    android:hint="@string/max_failed_password_attempts_hint">

                    <com.google.android.material.textfield.TextInputEditText
                        android:inputType="number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </com.google.android.material.textfield.TextInputLayout>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="5dp" />

                <CheckBox
                    android:id="@+id/maxFailedPasswordAttemptsDefaultApi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layoutDirection="rtl"
                    android:textAppearance="?attr/textAppearanceBodyLarge"
                    android:text="@string/max_failed_password_attempts_default_api" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/max_failed_password_attempts_default_api_description"
                    android:textAppearance="?attr/textAppearanceBodySmall" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="8dp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginVertical="10dp"
                    android:background="?android:attr/listDivider" />

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/usbDataSignaling"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/usb_data_signaling"
                    android:textAppearance="?attr/textAppearanceBodyLarge" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/usb_data_signaling_description"
                    android:textAppearance="?attr/textAppearanceBodySmall" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="4dp" />

                <CheckBox
                    android:id="@+id/usbDataSignalingCtl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layoutDirection="rtl"
                    android:textAppearance="?attr/textAppearanceBodyLarge"
                    android:text="@string/usb_data_signaling_ctl" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/usb_data_signaling_ctl_description"
                    android:textAppearance="?attr/textAppearanceBodySmall" />

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

        <ToggleButton
            android:id="@+id/toggle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?attr/textAppearanceTitleMedium"
            android:theme="@style/Theme.Sentry.ToggleButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>